Fixed grid item remove overlay z-index

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -76,6 +76,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba( 0 , 0 , 0 , 0.5 );
+  z-index: 100;
 }
 
 .gridItemOverlayContent {
